# Fabric_DE_Agent

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app-update.json  azure.yaml  chat-info.md  create_lakehouse.py  create_pipeline.py  fab_de_mcp.py  pyproject.toml  pyrightconfig.json  requirements-agent-ui.txt  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: ContainerMCP.prompt.md  localMCP.prompt.md
Approved/: pipeline_wait_two_steps.json
Instructions/: General Instruction.md  Lakehouse creation.md
apps/: streamlit_chat.py
assets/pipelines/: pipeline_wait_2_steps.json
assets/pipelines/pl_new_agent/: pipeline-content.json
assets/pipelines/pl_wait_1m_2m/: pipeline-content.json
docs/: architecture.md  auth.md  devui-dataflow.md  fabric-de-agent-new.md  folder-structure.md  index.md  mcp-internals.md  one-pager.md  run-local.md
entities/fabric_de_agent/: __init__.py
infra/: main.bicep
scripts/: Load-AzdEnv.ps1  Run-RegisterAgent.ps1  Run-StreamlitChat.ps1  mcp_schema_probe.py
src/Agents/: Fabric-de.py
src/devui/: requirements.txt
src/devui/fabric_de_agent/: .env.example  __init__.py  agent.py
src/fabric_de_mcp/: .env.example  __init__.py  __main__.py  config.py  requirements.txt  server.py
src/fabric_de_mcp/fabric/: __init__.py  api.py  auth.py  errors.py
tests/: conftest.py  test_imports.py
